--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -187,7 +187,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="favoriteLabel" destination="xqR-fo-d4e" id="RBk-PX-rOv"/>
-                                    <segue destination="V9a-KR-Meg" kind="showDetail" identifier="favoriteDetail" id="nFa-Og-etX"/>
+                                    <segue destination="YyH-Ol-Oes" kind="show" identifier="favoriteDetail" id="nFa-Og-etX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -214,7 +214,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dvu-Ch-5aT" customClass="VideoView" customModule="LASDictionaryV2" customModuleProvider="target">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dvu-Ch-5aT" customClass="FavoriteVideoView" customModule="LASDictionaryV2" customModuleProvider="target">
                                 <rect key="frame" x="16" y="269" width="343" height="191"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -229,14 +229,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <navigationItem key="navigationItem" id="fb0-xT-3HJ"/>
                     <connections>
-                        <outlet property="favoriteSignDetailLabel" destination="LRa-Sr-G2F" id="h4S-V9-xqd"/>
-                        <outlet property="favoriteVideoView" destination="Dvu-Ch-5aT" id="DdU-Qj-4Kn"/>
+                        <outlet property="favoriteLabel" destination="LRa-Sr-G2F" id="3Vn-Xs-L7C"/>
+                        <outlet property="favoriteVideoView" destination="Dvu-Ch-5aT" id="LC4-wO-Y6P"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="slJ-4a-peV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2480.8000000000002" y="-1842.7286356821592"/>
+            <point key="canvasLocation" x="3420" y="-1842.7286356821592"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="cYT-Z0-vL0">
@@ -287,6 +288,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4R5-Qf-wJm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="263" y="-1110"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kxA-oY-hpE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YyH-Ol-Oes" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ubk-YQ-MXR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="V9a-KR-Meg" kind="relationship" relationship="rootViewController" id="xCh-Ut-4CB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gJg-Xh-Zuy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2480.8000000000002" y="-1842.7286356821592"/>
         </scene>
     </scenes>
 </document>
