--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -30,12 +30,12 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="SHg-1x-JEf">
-                                <rect key="frame" x="156" y="146" width="63" height="21"/>
+                                <rect key="frame" x="154.5" y="146" width="66.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="63" id="CMK-TS-z03"/>
                                     <constraint firstAttribute="height" constant="21" id="Qxh-Tg-Njh"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -187,7 +187,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="favoriteLabel" destination="xqR-fo-d4e" id="RBk-PX-rOv"/>
-                                    <segue destination="YyH-Ol-Oes" kind="show" identifier="favoriteDetail" id="nFa-Og-etX"/>
+                                    <segue destination="DCY-WY-SNg" kind="show" identifier="favoriteDetail" id="AFR-cW-XN1"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -203,41 +203,52 @@
             <point key="canvasLocation" x="1356" y="-1787"/>
         </scene>
         <!--Favorite Detail View Controller-->
-        <scene sceneID="lM4-nD-nQd">
+        <scene sceneID="vdQ-6n-eS4">
             <objects>
-                <viewController id="V9a-KR-Meg" customClass="FavoriteDetailViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="DCY-WY-SNg" customClass="FavoriteDetailViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="hDJ-VA-G8d"/>
-                        <viewControllerLayoutGuide type="bottom" id="WEp-Iu-Hc8"/>
+                        <viewControllerLayoutGuide type="top" id="6k4-m5-oxo"/>
+                        <viewControllerLayoutGuide type="bottom" id="pyN-NN-k3R"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="MZ9-Ui-Fag">
+                    <view key="view" contentMode="scaleToFill" id="7x0-8c-OTC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dvu-Ch-5aT" customClass="FavoriteVideoView" customModule="LASDictionaryV2" customModuleProvider="target">
-                                <rect key="frame" x="16" y="269" width="343" height="191"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRa-Sr-G2F">
-                                <rect key="frame" x="166" y="107" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eO-89-bYx">
+                                <rect key="frame" x="166.5" y="136" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="8uO-Wb-DEp"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="dFa-aj-HRC"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8GM-fo-zMW" customClass="FavoriteVideoView" customModule="LASDictionaryV2" customModuleProvider="target">
+                                <rect key="frame" x="67" y="222" width="241" height="128"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="241" id="07S-Oc-7Hi"/>
+                                    <constraint firstAttribute="height" constant="128" id="i17-WQ-znQ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="9eO-89-bYx" firstAttribute="centerX" secondItem="8GM-fo-zMW" secondAttribute="centerX" id="0rK-FC-z7G"/>
+                            <constraint firstItem="9eO-89-bYx" firstAttribute="top" secondItem="6k4-m5-oxo" secondAttribute="bottom" constant="72" id="RWz-iU-jdO"/>
+                            <constraint firstItem="8GM-fo-zMW" firstAttribute="top" secondItem="9eO-89-bYx" secondAttribute="bottom" constant="65" id="VUb-fU-jpG"/>
+                            <constraint firstItem="9eO-89-bYx" firstAttribute="centerX" secondItem="7x0-8c-OTC" secondAttribute="centerX" id="zHG-PC-Vdy"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="fb0-xT-3HJ"/>
                     <connections>
-                        <outlet property="favoriteLabel" destination="LRa-Sr-G2F" id="3Vn-Xs-L7C"/>
-                        <outlet property="favoriteVideoView" destination="Dvu-Ch-5aT" id="LC4-wO-Y6P"/>
+                        <outlet property="favoriteLabel" destination="9eO-89-bYx" id="fKF-ek-OTh"/>
+                        <outlet property="favoriteVideoView" destination="8GM-fo-zMW" id="Bhu-Pa-rb0"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="slJ-4a-peV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hlF-rU-B63" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3420" y="-1842.7286356821592"/>
+            <point key="canvasLocation" x="2592" y="-1804"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="cYT-Z0-vL0">
@@ -288,24 +299,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4R5-Qf-wJm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="263" y="-1110"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="kxA-oY-hpE">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YyH-Ol-Oes" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ubk-YQ-MXR">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="V9a-KR-Meg" kind="relationship" relationship="rootViewController" id="xCh-Ut-4CB"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gJg-Xh-Zuy" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2480.8000000000002" y="-1842.7286356821592"/>
         </scene>
     </scenes>
 </document>
